src/Blunderr.Web/Styles/Shared/_show.scss
@import './_variables.scss';

div.show-heading{
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-width: 300px;
    width: 100%;
    border-bottom: calc(0.02rem + 0.05vw) solid $offWhite;
    padding-bottom: calc(0.3rem + 0.2vw);
    margin-bottom: calc(2rem + 0.5vw);

    h1{
        font-size: min(0.14rem + 10vw, 1.8rem + 0.24vw) !important;
        letter-spacing: calc(0.01rem + 0.03vw) !important;
        margin-bottom: 0 !important;
    }

    div.show-heading-right{
        position: relative;
        display: flex;
        justify-content: flex-end;
        align-items: center;

        img{
            margin-right: calc(0.3rem + 0.2vw);
        }
    }
}

div.show-body div.row{
    padding-left: calc(0.25rem + 3vw);
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    color: $lightGrey;

    label{
        font-weight: 500;
        padding-bottom: calc(0.25rem + 0.2vw);
        font-size: min(0.2rem + 2.2vw, 0.75rem + 0.15vw);
    }

    div.item{
        margin: 0 calc(2rem + 2vw) calc(3rem + 2vw) 0;
        display: flex;
        flex-direction: column;

        span,a{
            text-decoration: none;
            font-weight: 200;
            color: inherit;
            font-size: min(0.25rem + 3vw, 0.85rem + 0.2vw);
        }

        a{
            color: $babyBlue;
        }

        @media (max-width:1100px) {
            width: calc(3rem + 80vw) !important;
        }
    }
}

ul.attachment-list{
    display: flex;
    flex-direction: column;

    a{
        padding-bottom: calc(0.25rem + 0.15vw);
        display: flex;
        align-items: center;
        color: $offWhite;
        text-decoration: none;
        font-size: min(0.23rem + 2.7vw, 0.8rem + 0.2vw);
        font-weight: 200;
        line-height: calc(1.25rem + 0.75vw);

        @media (max-width:800px) {
            padding-left: calc(0.13rem + 0.15vw);
        }

        img{
            height: min(0.2rem + 2.5vw, 0.67rem + 0.2vw);
            padding-right: calc(0.13rem + 0.15vw);
        }
    }
}

